--- a/.gitignore
+++ b/.gitignore
@@ -29,8 +29,6 @@
 *.dylib
 
 # Executables
-*.exe
-*.out
 *.app
 *.i*86
 *.x86_64
@@ -41,6 +39,7 @@
 *.su
 *.idb
 *.pdb
+*.rdi
 
 # Kernel Module Compile Results
 *.mod*
